@@ -1,0 +1,51 @@
+<?php
+$language = array (
+  'blog_tools' => 'Blog tools',
+  'blog_tools:toggle:feature' => 'Aanraden',
+  'blog_tools:toggle:unfeature' => 'Afrade',
+  'blog_tools:no_blogs' => 'Geen blogs gevonden',
+  'blog_tools:transfer' => 'Eigenaar overdragen',
+  'blog_tools:widget:featured' => 'Toon alleen aangeraden blogs?',
+  'blog_tools:label:icon:exists' => 'Upload een icoon (laat leeg om het huidige icoon te behouden)',
+  'blog_tools:label:icon:new' => 'Upload een icoon',
+  'blog_tools:label:icon:remove' => 'Verwijder icoon',
+  'blog_tools:transfer:title' => 'Eigenaar overdragen van: %s',
+  'blog_tools:transfer:description' => 'Hier kun je de eigenaar van de blog aanpassen. Type de naam (of gebruikersnaam) van de nieuwe eigenaar en selecteer hem/haar uit de lijst. Klik vervolgens op Overdragen en de eigenaar wordt aangepast.',
+  'blog_tools:transfer:form:new_owner' => 'Type de naam van de nieuwe eigenaar',
+  'blog_tools:transfer:form:submit' => 'Overdragen',
+  'blog_tools:settings:image' => 'Blog afbeelding instellingen',
+  'blog_tools:settings:other' => 'Andere instellingen',
+  'blog_tools:settings:listing:image_align' => 'Blog lijstweergave afbeelding uitlijning',
+  'blog_tools:settings:listing:image_size' => 'Blog lijstweergave afbeelding grote',
+  'blog_tools:settings:full:image_align' => 'Blog detail weergave afbeelding uitlijning',
+  'blog_tools:settings:full:image_size' => 'Blog detail weergave afbeelding grote',
+  'blog_tools:settings:align:none' => 'Geen afbeelding',
+  'blog_tools:settings:align:left' => 'Links',
+  'blog_tools:settings:align:right' => 'Rechts',
+  'blog_tools:settings:size:tiny' => 'Erg klein (16x16)',
+  'blog_tools:settings:size:small' => 'Klein (40x40)',
+  'blog_tools:settings:size:medium' => 'Medium (100x100)',
+  'blog_tools:settings:size:large' => 'Groot (200x200)',
+  'blog_tools:settings:listing:strapline' => 'Toon extra informatie in lijstweergave',
+  'blog_tools:settings:strapline:default' => 'Standaard (eigenaar en tags)',
+  'blog_tools:settings:strapline:time' => 'Alleen tijd',
+  'blog_tools:settings:advanced_gatekeeper' => 'Gebruik geavanceerde blog gatekeeper',
+  'blog_tools:settings:advanced_gatekeeper:description' => 'Dit helpt niet aangemelde gebruiker om afgeschermde blogs makkelijker te vinden',
+  'blog_tools:action:error:input' => 'Onjuiste invoer om deze actie uit te voeren',
+  'blog_tools:action:error:guid' => 'De opgegeven GUID is geen geldige entity',
+  'blog_tools:action:error:entity' => 'Je mag de opgegeven entity niet bewerken',
+  'blog_tools:action:toggle_metadata:error' => 'Er is een onbekende fout opgetreden bij het bewerken van de entity, probeer het nogmaals',
+  'blog_tools:action:toggle_metadata:success' => 'De entity is succesvol bijgewerkt',
+  'blog_tools:action:transfer:error:owner' => 'Je kunt de blog niet overdragen aan dezelfde eigenaar',
+  'blog_tools:action:transfer:error:transfer' => 'Er is een onbekende fout opgetreden tijdens het overdragen van de blog, probeer het nogmaals',
+  'blog_tools:action:transfer:success' => 'Blog succesvol overgedragen',
+  'blog_tools:widgets:index_blog:name' => 'Blogs',
+  'blog_tools:widgets:index_blog:description' => 'Toon de laatste blogs op je community',
+  'blog_tools:widgets:index_blog:blog_count' => 'Hoeveel blogs moeten er getoond worden',
+  'blog_tools:widgets:index_blog:view_mode' => 'Hoe moeten de blogs worden weergegeven',
+  'blog_tools:widgets:index_blog:view_mode:list' => 'Lijst',
+  'blog_tools:widgets:index_blog:view_mode:preview' => 'Voorbeeld',
+  'blog_tools:widgets:index_blog:view_mode:slider' => 'Diavoorstelling',
+  'blog_tools:widgets:index_blog:no_result' => 'Geen blogs gevonden',
+);
+add_translation("nl", $language);
